Moved index.html again so that it's no longer publically visible on my portfolio website.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,10 +10,16 @@ html, body {
     margin: 0;
 }
 
-body {
+.wrapper {
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
+
+/* body {
+    display: flex;
+    flex-direction: column;
+} */
 
 h2 {
     font-size: 1.75em;
